# GraphiteDesktop

./: .env.example  .fix-versions.cjs  .gitignore  .gitmodules  LICENCE  README.md  index.html  next.config.js  package.json  pnpm-lock.yaml  postcss.config.cjs  prettier.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.ts
.exec/: exec-bundle-unix.sh  exec-bundle-win.sh  exec-debug-bundle-unix.sh  exec-debug-bundle-win.sh
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: build_release.yml  build_release_preview.yml  issue.yml
.husky/: pre-commit
src/: main_loader.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: layout.tsx  page.tsx
src/components/: CustomCursor.tsx  LoadingDots.tsx  Logo.tsx
src/providers/: SplashScreenProvider.tsx  splashScreen.tsx
src/styles/: tailwind.css
src/utils/: cn.ts  isEndpointUp.ts  isNativeRuntime.ts  nativeFetch.ts  spashHandler.ts
