[package]
name = "graphite_desktop"
version = "0.5.2"
description = "Graphite Desktop"
authors = ["GlitchTech Developments"]
license = "MIT"
repository = "https://github.com/GlitchTech-Developments/GraphiteDesktop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.2", features = [ "http-request", "window-create", "shell-open"] }
serde = { version = "1.0.193", features = ["derive"] }
curl = "0.4.44"
serde_json = "1.0.108"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
